# example-haskell-with-bazel

./: .gitignore  README.md  WORKSPACE  package.yaml
.github/workflows/: example.yaml
8.10.7/: WORKSPACE  stack-snapshot.yaml  stack.yaml
9.0.1/: WORKSPACE
9.0.1/app/: Main.hs
9.0.2/: WORKSPACE  package.yaml  stack-snapshot.yaml  stack.yaml
9.2.1/: BUILD.bazel  WORKSPACE  stack-snapshot.yaml
9.2.2/: stack.yaml
9.2.2/app/: Main.hs
src/: Lib.hs
